crates/flui-rendering/tests/snapshots/harness_snapshot__clip_layer.snap
---
source: crates/flui-rendering/tests/harness_snapshot.rs
expression: run.snapshot()
---
Offset
  dx: 0.00
  dy: 0.00
  ClipRect
    rect: (0.00,0.00,40.00,40.00)
    clip: AntiAlias
    needs_compositing
    Picture
      bounds: (0.00,0.00,40.00,40.00)
      commands: 1
      DrawCommand
        rect: (0.00,0.00,40.00,40.00)
        color: #0000FFFF
        style: Fill
