crates/flui-rendering/tests/snapshots/harness_snapshot__colored_box.snap
---
source: crates/flui-rendering/tests/harness_snapshot.rs
expression: run.snapshot()
---
Offset
  dx: 0.00
  dy: 0.00
  Picture
    bounds: (0.00,0.00,40.00,40.00)
    commands: 1
    DrawCommand
      rect: (0.00,0.00,40.00,40.00)
      color: #FF0000FF
      style: Fill
