crates/flui-rendering/tests/snapshots/harness_snapshot__decorated_box.snap
---
source: crates/flui-rendering/tests/harness_snapshot.rs
expression: run.snapshot()
---
Offset
  dx: 0.00
  dy: 0.00
  Picture
    bounds: (-4.00,-2.00,92.00,72.00)
    commands: 3
    DrawCommand
      path_bounds: (2.00,4.00,80.00,60.00)
      color: #00000080
      elevation: 6.00
    DrawCommand
      rect: (0.00,0.00,80.00,60.00)
      color: #FFFFFFFF
      style: Fill
    DrawCommand
      outer: {rect: (0.00,0.00,80.00,60.00), r_tl: 0.00, r_tr: 0.00, r_br: 0.00, r_bl: 0.00}
      inner: {rect: (2.00,2.00,76.00,56.00), r_tl: 0.00, r_tr: 0.00, r_br: 0.00, r_bl: 0.00}
      color: #000000FF
      style: Fill
