crates/flui-rendering/tests/snapshots/harness_snapshot__opacity_layer.snap
---
source: crates/flui-rendering/tests/harness_snapshot.rs
expression: run.snapshot()
---
Offset
  dx: 0.00
  dy: 0.00
  Opacity
    alpha: 0.50
    needs_compositing
    Picture
      bounds: (0.00,0.00,50.00,50.00)
      commands: 1
      DrawCommand
        rect: (0.00,0.00,50.00,50.00)
        color: #FF0000FF
        style: Fill
