crates/flui-rendering/tests/snapshots/harness_snapshot__smoke.snap
---
source: crates/flui-rendering/tests/harness_snapshot.rs
expression: "\"line one\\nline two\""
---
line one
line two
